- enabled chunks editing - added less cpu intense option to the settings - bug fixes